# StriveFrameViewer

./: .gitignore  .gitmodules  README.md  replace.py
Scripts/: character_data_collector.py  geminiAPI.py  llama3.py  move_output_parser.py  openaiAPI.py
Scripts/character_data/: Jack-O_Combos.txt  Jack-O_Overview.txt  Jack-O_Starter_Guide.txt  Jack-O_Strategy_Guide.txt  Johnny_Combos.txt  Johnny_Overview.txt  Johnny_Starter_Guide.txt  Johnny_Strategy_Guide.txt  Slayer_Combos.txt  Slayer_Overview.txt  Slayer_Starter_Guide.txt  Slayer_Strategy_Guide.txt  Testament_Combos.txt  Testament_Overview.txt  Testament_Starter_Guide.txt  Testament_Strategy_Guide.txt
StriveFrameData/: CMakeLists.txt
StriveFrameData/include/: action_descriptions.h  arcsys.h  frame_data.h  framebar.h  framebar_p.h  output_file.h  struct_util.h
StriveFrameData/src/: action_descriptions.cpp  arcsys.cpp  dllmain.cpp  frame_data.cpp  framebar.cpp  hitboxes.cpp  output_file.cpp
